// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`price-beth successful calls return success when fetching the USD/BEth price 1`] = `
Object {
  "data": Object {
    "result": "4430014752502816924005",
  },
  "jobRunID": "1",
  "result": "4430014752502816924005",
  "statusCode": 200,
}
`;

exports[`price-beth successful calls returns success when fetching the BTC/BEth price 1`] = `
Object {
  "data": Object {
    "result": "78260515713931684",
  },
  "jobRunID": "1",
  "result": "78260515713931684",
  "statusCode": 200,
}
`;

exports[`price-beth successful calls returns success when fetching the ETH/BEth price 1`] = `
Object {
  "data": Object {
    "result": "982848955144701712",
  },
  "jobRunID": "1",
  "result": "982848955144701712",
  "statusCode": 200,
}
`;
